chandeliers-lus/tests/compile_fail/ui/tc/extern/missing-node.stderr
error[E0412]: cannot find type `missing` in this scope
 --> tests/compile_fail/ui/tc/extern/missing-node.rs:3:17
  |
3 |     extern node missing() returns ();
  |                 ^^^^^^^ not found in this scope
